testsuite/tests/impredicative/T17332.stderr

T17332.hs:13:7: error: [GHC-05617]
    • Could not solve: ‘a’
        arising from the head of a quantified constraint
        arising from a use of ‘MkDict’
    • In the expression: MkDict
      In an equation for ‘aux’: aux = MkDict
